[package]
name = "wdl-core"
version = "0.2.0"
description = "Common functionality for the `wdl` family of crates"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
convert_case.workspace = true
lazy_static.workspace = true
nonempty.workspace = true
pest.workspace = true
serde.workspace = true
