[package]
name = "wdl-diagnostics"
version = "0.1.4"
description = "Utilities for reporting diagnostics in the wdl-* family of crates"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-diagnostics"
documentation = "https://docs.rs/wdl-diagnostics"
rust-version.workspace = true

[features]
backtrace = ["dep:wdl-engine"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
codespan-reporting.workspace = true
wdl-ast = { path = "../wdl-ast", version = "0.25.0" }
wdl-engine = { path = "../wdl-engine", version = "0.16.0", optional = true }

[lints]
workspace = true
