[package]
name = "wdl-doc"
version = "0.12.0"
description = "Documentation generator for Workflow Description Language (WDL) documents."
rust-version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-doc"
documentation = "https://docs.rs/wdl-doc"

[dependencies]
ammonia.workspace = true
anyhow.workspace = true
indexmap.workspace = true
maud.workspace = true
path-clean.workspace = true
pathdiff.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wdl-analysis = { path = "../wdl-analysis", version = "0.17.0" }
wdl-ast = { path = "../wdl-ast", version = "0.21.0" }

[dev-dependencies]
fs_extra.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true

[[test]]
name = "doc"
