[package]
name = "wdl-doc"
version = "0.12.1"
description = "Documentation generator for Workflow Description Language (WDL) documents."
rust-version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-doc"
documentation = "https://docs.rs/wdl-doc"

[dependencies]
ammonia.workspace = true
anyhow.workspace = true
maud.workspace = true
path-clean.workspace = true
pathdiff.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wdl-analysis = { path = "../wdl-analysis", version = "0.17.2" }
wdl-ast = { path = "../wdl-ast", version = "0.21.1" }

[dev-dependencies]
async-trait.workspace = true
axum.workspace = true
colored.workspace = true
libtest-mimic = { workspace = true }
tempfile.workspace = true
# TODO: Use crates.io version once the selenium-manager feature is published
thirtyfour = { git = "https://github.com/vrtgs/thirtyfour.git", rev = "0ea8e3b" }
tower-http = { workspace = true, features = ["fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
wdl-analysis = { path = "../wdl-analysis", version = "0.17.2" }

[lints]
workspace = true

[[test]]
name = "ui"
path = "tests/ui.rs"
harness = false
