[package]
name = "wdl-engine"
version = "0.9.0"
description = "Execution engine for Workflow Description Language (WDL) documents."
rust-version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-engine"
documentation = "https://docs.rs/wdl-engine"

[features]
default = []
codespan = ["wdl-ast/codespan"]
codespan-reporting = ["codespan", "dep:codespan-reporting"]

[dependencies]
anyhow = { workspace = true }
bimap = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
cloud-copy = { workspace = true }
codespan-reporting = { workspace = true, optional = true }
crankshaft = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
nonempty = { workspace = true }
ordered-float = { workspace = true }
path-clean = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rev_buf_reader = { workspace = true }
rowan = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
shellexpand = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-retry2 = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
wdl-analysis = { version = "0.14.0", path = "../wdl-analysis" }
wdl-ast = { version = "0.18.0", path = "../wdl-ast" }
wdl-grammar = { version = "0.18.0", path = "../wdl-grammar" }

[dev-dependencies]
approx = { workspace = true }
libtest-mimic = { workspace = true }
pretty_assertions = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true

[[test]]
name = "inputs"
required-features = ["codespan-reporting"]
harness = false

[[test]]
name = "tasks"
required-features = ["codespan-reporting"]
harness = false

[[test]]
name = "workflows"
required-features = ["codespan-reporting"]
harness = false
