[package]
name = "wdl-engine"
version = "0.10.0"
description = "Execution engine for Workflow Description Language (WDL) documents."
rust-version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-engine"
documentation = "https://docs.rs/wdl-engine"

[dependencies]
anyhow = { workspace = true }
arrayvec = { workspace = true }
bimap = { workspace = true }
blake3 = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
cloud-copy = { workspace = true }
codespan-reporting = { workspace = true }
crankshaft = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
nonempty = { workspace = true }
num_enum = { workspace = true }
ordered-float = { workspace = true }
parking_lot = { workspace = true }
path-clean = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rev_buf_reader = { workspace = true }
rowan = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
shellexpand = { workspace = true }
sysinfo = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-retry2 = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }
wdl-analysis = { version = "0.15.0", path = "../wdl-analysis" }
wdl-ast = { version = "0.19.0", path = "../wdl-ast" }
wdl-grammar = { version = "0.19.0", path = "../wdl-grammar" }

[dev-dependencies]
approx = { workspace = true }
figment = { workspace = true }
libtest-mimic = { workspace = true }
pretty_assertions = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }

[lints]
workspace = true

[[test]]
name = "inputs"
harness = false

[[test]]
name = "tasks"
harness = false

[[test]]
name = "workflows"
harness = false
