[package]
name = "wdl-format"
version = "0.11.0"
description = "Formatting of WDL (Workflow Description Language) documents"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-format"
documentation = "https://docs.rs/wdl-format"

[dependencies]
nonempty.workspace = true
thiserror.workspace = true
wdl-ast = { path = "../wdl-ast", version = "0.17.0", features = ["codespan"] }

[dev-dependencies]
anyhow = { workspace = true }
codespan-reporting = { workspace = true }
libtest-mimic = { workspace = true }
pretty_assertions.workspace = true

[lints]
workspace = true

[[test]]
name = "format"
harness = false
