[package]
name = "wdl-gauntlet"
version = "0.1.0"
description = "Command line tool to test lexing and parsing of community WDL projects"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
chrono = "0.4.31"
clap.workspace = true
colored.workspace = true
dirs = "5.0.1"
env_logger.workspace = true
indexmap.workspace = true
log.workspace = true
nonempty.workspace = true
octocrab = "0.32.0"
reqwest = "0.11.22"
serde.workspace = true
serde_with.workspace = true
tokio.workspace = true
toml.workspace = true
urlencoding = "2.1.3"
wdl-ast = { path = "../wdl-ast" }
wdl-core = { path = "../wdl-core" }
wdl-grammar = { path = "../wdl-grammar" }
