[package]
name = "wdl-gauntlet"
version = "0.1.0"
description = "Testing of parse trees and ASTs within the `wdl` family of crates"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
chrono = "0.4.31"
clap.workspace = true
colored.workspace = true
dirs = "5.0.1"
env_logger.workspace = true
faster-hex = "0.9.0"
git2 = "0.18.3"
indexmap.workspace = true
log.workspace = true
nonempty.workspace = true
serde.workspace = true
serde_with.workspace = true
temp-dir = "0.1.13"
tokio.workspace = true
toml.workspace = true
urlencoding = "2.1.3"
wdl-ast = { path = "../wdl-ast", version = "0.1.0" }
wdl-core = { path = "../wdl-core", version = "0.1.0" }
wdl-grammar = { path = "../wdl-grammar", version = "0.2.0" }
