[package]
name = "wdl-gauntlet"
version = "0.3.0"
description = "Testing of parse trees and ASTs within the `wdl` family of crates"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdl-lint = { path = "../wdl-lint", version = "0.2.0", features = ["codespan"] }
clap.workspace = true
colored.workspace = true
dirs.workspace = true
env_logger.workspace = true
faster-hex.workspace = true
git2.workspace = true
indexmap.workspace = true
log.workspace = true
serde.workspace = true
serde_with.workspace = true
temp-dir.workspace = true
tokio.workspace = true
toml.workspace = true
anyhow.workspace = true
codespan-reporting.workspace = true
