[package]
name = "wdl-grammar"
version = "0.16.0"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description = "A parse tree for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
repository = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl-grammar"

[features]
codespan = ["dep:codespan-reporting"]

[dependencies]
codespan-reporting = { workspace = true, optional = true }
logos = { workspace = true }
rowan = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
codespan-reporting = { workspace = true }
libtest-mimic = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true

[[test]]
name = "parsing"
required-features = ["codespan"]
harness = false
