[package]
name = "wdl-grammar"
version = "0.23.0"
description = "A parse tree for Workflow Description Language (WDL) documents"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-grammar"
documentation = "https://docs.rs/wdl-grammar"

[features]
python = ["dep:pyo3"]

[dependencies]
codespan-reporting = { workspace = true }
indexmap = { workspace = true }
logos = { workspace = true }
pyo3 = { workspace = true, optional = true }
rowan = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
libtest-mimic = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true

[[test]]
name = "parsing"
harness = false
