[package]
name = "wdl-lint"
version = "0.13.0"
description = "Lint rules for Workflow Description Language (WDL) documents"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/wdl-lint"
readme = "../README.md"

[dependencies]
wdl-ast = { path = "../wdl-ast", version = "0.14.0" }
wdl-analysis = { path = "../wdl-analysis", version = "0.10.0" }

anyhow = { workspace = true }
convert_case = { workspace = true }
ftree = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
rowan = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
codespan-reporting = { workspace = true }
colored = { workspace = true }
path-clean = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }

[features]
codespan = ["wdl-ast/codespan"]

[lints]
workspace = true

[[test]]
name = "lints"
required-features = ["codespan"]
harness = false
