[package]
name = "wdl-lint"
version = "0.19.0"
description = "Lint rules for Workflow Description Language (WDL) documents"
rust-version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-lint"
documentation = "https://docs.rs/wdl-lint"
readme = "../README.md"

[dependencies]
anyhow = { workspace = true }
convert_case = { workspace = true }
ftree = { workspace = true }
indexmap = { workspace = true }
rand = { workspace = true }
rowan = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
wdl-analysis = { path = "../wdl-analysis", version = "0.16.0" }
wdl-ast = { path = "../wdl-ast", version = "0.20.0" }

[dev-dependencies]
codespan-reporting = { workspace = true }
libtest-mimic = { workspace = true }
path-clean = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[[test]]
name = "lints"
harness = false
