[package]
name = "wdl-lsp"
version = "0.18.0"
description = "Language Server Protocol implementation for WDL"
license.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-lsp"
documentation = "https://docs.rs/wdl-lsp"

[dependencies]
anyhow = { workspace = true }
line-index = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
struct-patch = { workspace = true, features = ["nesting"] }
tokio = { workspace = true }
tower-lsp = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
wdl-analysis = { path = "../wdl-analysis", version = "0.19.0" }
wdl-ast = { path = "../wdl-ast", version = "0.22.1" }
wdl-lint = { path = "../wdl-lint", version = "0.22.0" }

[dev-dependencies]
blake3 = { workspace = true }
fs_extra = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
