[package]
name = "wdl-macros"
version = "0.1.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
edition.workspace = true
license.workspace = true
description = "Macros used within the `wdl` family of crates"
homepage = "https://github.com/stjude-rust-labs/wdl"
repository = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl-macros"

[dependencies]
pest.workspace = true