[package]
name = "wdl-modules"
version = "0.2.0"
description = "Implementation of the WDL module specification"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl-modules"
documentation = "https://docs.rs/wdl-modules"

[features]
default = []
test-utils = []
# The resolver layer: `Resolver` trait, Git-backed default implementation,
# on-disk cache, lockfile generation, TOFU trust handling. Off by default
# so consumers like `wdl-doc` that only need the manifest/lockfile/hashing
# types do not pay for `git2` and friends.
resolver = [
    "dep:bon",
    "dep:bytesize",
    "dep:dirs",
    "dep:futures",
    "dep:git2",
    "dep:globset",
    "dep:tokio",
    "dep:toml",
    "dep:tracing",
]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bon = { workspace = true, optional = true }
bytesize = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true, optional = true }
git2 = { workspace = true, optional = true }
globset = { workspace = true, optional = true }
hex = { workspace = true }
path-clean = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
spdx = { workspace = true }
ssh-key = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["fs", "rt", "sync"] }
toml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
unicode-normalization = { workspace = true }
url = { workspace = true, features = ["serde"] }
wdl-grammar = { path = "../wdl-grammar", version = "0.23.0" }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
