[package]
name = "wdl"
version = "0.11.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
rust-version.workspace = true
license.workspace = true
edition.workspace = true
description = "Lexing, parsing, validation, and linting for Workflow Description Language (WDL) documents"
homepage = "https://github.com/stjude-rust-labs/wdl"
repository = "https://github.com/stjude-rust-labs/wdl"
documentation = "https://docs.rs/wdl"
readme = "../README.md"

[dependencies]
wdl-grammar = { path = "../wdl-grammar", version = "0.11.0", optional = true }
wdl-ast = { path = "../wdl-ast", version = "0.10.0", optional = true }
wdl-lint = { path = "../wdl-lint", version = "0.9.0", optional = true }
wdl-analysis = { path = "../wdl-analysis", version = "0.6.0", optional = true }
wdl-lsp = { path = "../wdl-lsp", version = "0.6.0", optional = true }
wdl-format = { path = "../wdl-format", version = "0.4.0", optional = true }
wdl-doc = { path = "../wdl-doc", version = "0.1.0", optional = true }
wdl-engine = { path = "../wdl-engine", version = "0.1.0", optional = true }
tracing-subscriber = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
colored = { workspace = true, optional = true }
codespan-reporting = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
tracing-indicatif = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
clap-verbosity-flag =  { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
url = { workspace = true, optional = true }
webbrowser = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }

[dev-dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
codespan-reporting = { workspace = true }

[features]
default = ["ast", "grammar", "lint", "format", "engine"]
analysis = ["dep:wdl-analysis"]
ast = ["dep:wdl-ast"]
engine = ["dep:wdl-engine"]
format = ["dep:wdl-format"]
doc = ["dep:wdl-doc"]
grammar = ["dep:wdl-grammar"]
lint = ["dep:wdl-lint"]
lsp = ["dep:wdl-lsp"]
codespan = ["ast", "wdl-ast/codespan", "dep:codespan-reporting"]
cli = [
    "analysis",
    "codespan",
    "engine",
    "lint",
    "format",
    "doc",
    "dep:clap",
    "dep:tracing-subscriber",
    "dep:anyhow",
    "dep:colored",
    "dep:indicatif",
    "dep:tracing-indicatif",
    "dep:tokio",
    "dep:clap-verbosity-flag",
    "dep:tracing-log",
    "dep:tracing",
    "dep:url",
    "dep:serde_json",
    "dep:webbrowser",
    "dep:indexmap",
]

[lints]
workspace = true

[[example]]
name = "explore"
required-features = ["codespan"]

[[example]]
name = "parse"
required-features = ["codespan"]

[[bin]]
name = "wdl"
required-features = ["cli"]

[package.metadata.docs.rs]
all-features = true
