[package]
name = "wdl"
version = "0.22.1"
authors.workspace = true
description = "Lexing, parsing, validation, linting, documentation, analysis, and execution for Workflow Description Language (WDL) documents"
rust-version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository = "https://github.com/stjude-rust-labs/sprocket/tree/main/crates/wdl"
documentation = "https://docs.rs/wdl"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = [
    "analysis",
    "ast",
    "engine",
    "format",
    "doc",
    "grammar",
    "lint",
    "lsp",
]
analysis = ["dep:wdl-analysis"]
ast = ["dep:wdl-ast"]
doc = ["dep:wdl-doc"]
engine = ["dep:wdl-engine"]
format = ["dep:wdl-format"]
grammar = ["dep:wdl-grammar"]
lint = ["dep:wdl-lint"]
lsp = ["dep:wdl-lsp"]

[dependencies]
wdl-analysis = { path = "../wdl-analysis", version = "0.17.2", optional = true }
wdl-ast = { path = "../wdl-ast", version = "0.21.1", optional = true }
wdl-doc = { path = "../wdl-doc", version = "0.12.1", optional = true }
wdl-engine = { path = "../wdl-engine", version = "0.12.1", optional = true }
wdl-format = { path = "../wdl-format", version = "0.15.1", optional = true }
wdl-grammar = { path = "../wdl-grammar", version = "0.21.0", optional = true }
wdl-lint = { path = "../wdl-lint", version = "0.20.1", optional = true }
wdl-lsp = { path = "../wdl-lsp", version = "0.17.1", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
codespan-reporting = { workspace = true }

[lints]
workspace = true

[[example]]
name = "explore"

[[example]]
name = "parse"
